Fixed checkbox alignment bug in Safari.

--- a/web/sites/all/themes/gpii_sai/scss/gpii_sai.scss
+++ b/web/sites/all/themes/gpii_sai/scss/gpii_sai.scss
@@ -977,14 +977,12 @@ tree-control.tree-classic li .tree-selected {
   .view-node-flag-done.view-display-id-block_2 {
     .views-field {
       position: relative;
-      margin-bottom: 0.3rem;
     }
   }
 
   .view-node-flag-done.view-display-id-block_1 {
     .views-field {
       padding-left: 2rem;
-      margin-bottom: 0.162rem;
     }
   }
   .flag-photo-complete, .flag-description-complete, .flag-alt-title-complete, .flag-mfgr-complete, .flag-taxonomy-complete, .flag-wheretobuy-complete {
